8057586: Explicit GC ignored if GCLocker is active

Reviewed-by: tschatzl, ayang